# Vending-machine

./: README.md
VendingMachine/: CMakeLists.txt  README.Doc  main.cpp  teamtask-assi3-aya.cbp  teamtask-assi3-aya.depend  teamtask-assi3-aya.layout
VendingMachine/include/: Buyer.h  Item.h  Machine.h  Money.h
VendingMachine/src/: Buyer.cpp  Item.cpp  Machine.cpp  Money.cpp
